styles.css
/* Import Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');

/*===============
  global styles
===============*/

* {
  padding: 0;
  margin: 0;
  border: 0;
  outline: 0;
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  box-shadow: none;
  box-sizing: border-box;
max-width: 100%;
}

html {
  scroll-behavior: smooth;
  overflow-x: hidden;
  max-width: 100%;
}

body {
  font-family: "Poppins", sans-serif;
  line-height: 1.5;
  color: var(--clr-fg);
  background-color: var(--clr-bg);

  overflow-x: hidden;
  max-width: 100%;



  --clr-bg: #2e3047;
  --clr-bg-alt: #3c3f58;
  --clr-fg: #b4bcde;
  --clr-fg-alt: #707793;
  --clr-primary: #3bba9c;
  --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
}

::-moz-selection {
  background: var(--clr-primary);
  color: var(--clr-bg);
}

::-webkit-selection,
::selection {
  background: var(--clr-primary);
  color: var(--clr-bg);
}

h1,
h2,
h3,
h4 {
  line-height: 1.2;
  color: var(--clr-fg);
}

h1 {
  font-size: 4rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.3rem;
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
}

button {
  cursor: pointer;
}

@media (max-width: 1440px) {
  h1 {
    font-size: 2.6rem;
  }
}

/*===================
  buttons and links
===================*/

.link {
  color: var(--clr-primary);
  padding: 0 0 0.3em 0;
  position: relative;
}

.link:hover {
  color: var(--clr-primary);
}

.link::before {
  content: "";
  display: inline;
  width: 0%;
  height: 0.2em;
  position: absolute;
  bottom: 0;
  background-color: var(--clr-primary);
  transition: width 0.2s ease-in;
}

.link:hover::before,
.link:focus::before {
  width: 100%;
}

.link--nav {
  color: var(--clr-fg);
  text-transform: lowercase;
  font-weight: 500;
}

.link--icon {
  color: var(--clr-fg);
  font-size: 1.2rem;
}

.btn {
  background-color: inherit;
  font-family: "Space Mono", "Courier New", Courier, monospace;
  display: block;
  padding: 0.8em 1.4em;
  font-weight: 500;
  font-size: 0.9rem;
  text-transform: lowercase;
  transition: transform 0.2s ease-in-out;

}

.btn--outline {
  color: var(--clr-primary);
  border: 2px solid var(--clr-primary);
  position: relative;
  overflow: hidden;
  z-index: 1;
  border-radius: 4px;
}

.btn--outline:focus,
.btn--outline:hover {
  color: var(--clr-bg);
}

.btn--outline:before {
  content: "";
  position: absolute;
  background-color: var(--clr-primary);
  right: 100%;
  bottom: 0;
  left: 0;
  top: 0;
  z-index: -1;
  transition: right 0.2s ease-in-out;
}

.btn--outline:hover::before,
.btn--outline:focus::before {
  right: 0;
}

.btn--plain {
  text-transform: initial;
  background-color: var(--clr-bg-alt);
  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
  border: 0;
}

.btn--plain:hover {
  transform: translateY(-4px);
}

.btn--icon {
  padding: 0;
  font-size: 1.2rem;
}

.btn--icon:hover,
.btn--icon:focus {
  color: var(--clr-primary);
}

.btn--icon:active {
  transform: translateY(-5px);
}

/*========
  layout
========*/

.center {
  display: flex;
  align-items: center;
}

.header {
  height: 8em;
  max-width: 1280px;
  width: 95%;
  margin: 0 auto;
  justify-content: space-between;
}

main {
  max-width: 1280px;
  margin: 0 auto;
}

.section {
  margin-top: 10em;
}

.section__title {
  text-align: center;
  margin-top: 2em;
  margin-bottom: 2em;
  text-transform: uppercase;
}

.nav__list {
  font-family: "Space Mono", "Courier New", Courier, monospace;
  margin-right: 1.5em;
  display: flex;
}

.nav__list-item {
  font-family: "Space Mono", "Courier New", Courier, monospace;
  margin-left: 1.5em;
}

.nav__hamburger {
  display: none;
  width: 1em;
}

.about {
  flex-direction: column;
  margin-top: 3em;
  align-items: flex-start;
  text-align: left;
  margin-left: 0em;
}

.about {


  margin-top: 0em;
  position: absolute;
  top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-45%);
}


.about__name {
  color: var(--clr-fg);
}

.about__role {
  font-family: "Space Mono", "Courier New", Courier, monospace;
  color: var(--clr-primary);
  margin-top: 0.5em;
}

.about__desc {
  font-size: 1rem;
  max-width: 600px;
}

.about__desc,
.about__contact {
  margin-top: 3em;
}

.about .link--icon {
  margin-right: 1em;
}

.about .btn--outline {
  margin-right: 2em;
}

.about__image-container {
  margin-top: 0em;
  position: absolute;
  top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-45%);

  margin-left: 800px;
}

.about__image-container img {
  height: auto;
  max-width: 480px;
  box-shadow: var(--shadow);
  border-radius: 8px;

}

.projects__grid {
  max-width: 1280px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 2em;
}

.project {
  padding-bottom: 2em;
  margin: 0 auto;
  text-align: center;
  box-shadow: var(--shadow);
  background-color: var(--clr-bg-alt);
  transition: transform 0.2s linear;
  border-radius: 8px;
}

.project:hover {
  transform: translateY(-7px);

}

.project__title {
  margin-top: 1em;
}

.project__description {
  margin-top: 1em;
  margin-left: 2em;
  margin-right: 2em;
}

.project__stack {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 1.2em 0;
}

.project__stack-item {
  margin: 0.8em;
  font-weight: 500;
  font-size: 0.8rem;
  color: var(--clr-primary);
  font-family: "Space Mono", "Courier New", Courier, monospace;
}

.project .link--icon {
  margin-left: 0.5em;
}

.skills__list {
  max-width: 720px;
  width: 95%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.skills__list-item {
  margin: 0.5em;
  border-radius: 4px;
}

.contact {
  flex-direction: column;
}

.footer {
  padding: 3em 0;
  margin-top: 4em;
  text-align: center;
}

.footer__link {
  font-family: "Space Mono", "Courier New", Courier, monospace;
  font-size: 0.9rem;
  font-weight: 700;
  color: var(--clr-fg);
}

.scroll-top {
  display: none;
  position: fixed;
  bottom: 1em;
  right: 2em;
  background-color: transparent;
  font-size: 1.8rem;
  transition: transform 0.2s ease-in-out;
}

.timeline {
  position: relative;
  max-width: 1280px;
  width: 100%;
  margin: 0 auto;
  margin-top: 5em;
  margin-bottom: 5em;
}

.timeline-line {
  position: absolute;
  top: 0;
  bottom: 0;
  left: calc(50% - 2px);
  /* Adjust left position by half the width */
  width: 4px;
  background-color: var(--clr-primary);
  z-index: 1;
}

.timeline-item {
  position: relative;
  width: 50%;
  padding: 20px 0;
}

.timeline-item.left {
  text-align: left;

  padding-right: 60px;
}

.timeline-item.right {
  left: 50%;
  /* Adjust left position to account for the line width */
  text-align: left;

  padding-left: 60px;
}

.timeline-content {

  background-color: var(--clr-bg-alt);
  padding: 30px;
  border-left: 4px solid var(--clr-fg-alt);
  border-right: 4px solid var(--clr-fg-alt);
  position: relative;
  box-shadow: var(--shadow);
  color: #e0e0e0;
  transition: transform 0.2s linear;
  border-radius: 8px;
}


.timeline-content:hover {

  transform: translateY(-7px) scale(1.05);
}

.job-title {
  color: var(--clr-primary);
  font-weight: bold;
}

.company {
  color: var(--clr-fg);
}

.time {
  font-family: "Space Mono", "Courier New", Courier, monospace;
  color: var(--clr-fg-alt);
  display: block;
  font-size: 1em;
  margin: 8px 0 12px;
}

p {
  color: #cfd8dc;
  font-size: 1em;
  line-height: 1.75;
}



.fa-chevron-right {
  color: var(--clr-primary);
  margin-right: 0.8em;
}

.project__image-container {
  margin: 0em;
  position: relative;

  overflow: hidden;
  border-radius: 8px;

}

.project__image-container img {
  width: 100%;
  height: 100%;
  transition: transform 0.2s ease-in-out;
  aspect-ratio: 18/9;
  object-fit: cover;

}

.project__image-container:hover img {
  transform: scale(1.2);
}


/* Gallery Styles */
.gallery {
  margin-top: 0em;
}

.gallery__grid {
  max-width: 1280px;
  column-count: 3;
  /* Set the number of columns */
  column-gap: 1em;
  row-gap: 2em;
  /* Set the gap between columns */

}

.gallery__item {
  position: relative;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: var(--shadow);

  display: inline-block;

}

.gallery__item img {
  width: 100%;
  height: auto;
  object-fit: contain;
  border-radius: 8px;
  transition: transform 0.3s ease-in-out;
}

.gallery__item:hover img {
  transform: scale(1.1);

}

@media (max-width: 1440px) {
  .header {
    height: 6em;
    margin-left: 1.5em;
    margin-right: 1.5em;
  }

  .section {
    margin-top: 4em;

  }

  .nav__list {
    display: none;
  }

  .nav {
    display: none;
  }


  .nav__hamburger {
    display: none;
  }

  .about {
    align-items: flex-start;
    margin-top: 27.5em;
  }

  .about__desc {
    margin-left: 1em;
    margin-right: 1em;
  }

  .about h1 {
    margin-left: 4%;
    margin-right: 4%;
  }

  .about__role {
    margin-left: 4%;
    margin-right: 4%;
  }

  .about__contact {
    margin-left: 4%;
    margin-right: 4%;
  }


  .footer {
    padding: 2em;
    margin-top: 3em;
  }

  .scroll-container {
    display: none;
  }



  .about__image-container {
    position: relative;
    margin-left: 2.5em;
    margin-right: 2.5em;
    margin-top: 10.5em;

    display: flex;
    justify-content: center;
  }

  .about__image-container img {
    max-width: 100%;
    width: auto;
  }

  .projects__grid {
    max-width: 1280px;
    margin-left: 1em;
    margin-right: 1em;
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 2em;
  }





  .timeline {
    position: relative;
    max-width: 1280px;
    width: 100%;
    margin-left: 1em;
    margin-right: 1em;
    margin-bottom: 5em;
  }

  .timeline-line {
    display: none;
  }

  .timeline-item {
    position: relative;
    width: 107%;
    text-align: left;
    margin-left: 0em;
    margin-right: 2em;
  }

  .timeline-item.right {
    position: relative;
    width: 107%;
    left: -5.75em;
    text-align: left;
    margin-left: 2em;
    margin-right: 2em;
  }

  .timeline-content {
    background-color: var(--clr-bg-alt);

    border-left: 4px solid var(--clr-fg-alt);
    position: relative;
    box-shadow: var(--shadow);
    color: #e0e0e0;
    transition: transform 0.2s linear;
    border-radius: 8px;
  }

  .timeline-content:hover {
    transform: translateY(-7px) scale(1.05);
  }

  .timeline-content {
    padding: 20px;
  }

  .skills h3 {
    text-align: center;
    margin: 1em;
  }
}

